# awesome-environment-manager

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/aem/: cnvironment_class.py
tests/: test_environment_class.py
